Update hugo post

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   
   
   <div class="summary">
-    <h2><a href="http://foresukecom.github.io/post/javascript_closure/">JavaScriptでクロージャ </a></h2>
+    <h2><a href="http://foresukecom.github.io/post/javascript_closure/">JavaScriptでクロージャを触ったお話 </a></h2>
     <div class="meta">
       Oct 14, 2018 &nbsp;
       
