Update hugo post

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   
   
   <div class="summary">
-    <h2><a href="http://foresukecom.github.io/post/change_job/">退職エントリー </a></h2>
+    <h2><a href="http://foresukecom.github.io/post/resign/">退職エントリ </a></h2>
     <div class="meta">
       Dec 29, 2018 &nbsp;
       
