Update hugo post

--- a/about/index.html
+++ b/about/index.html
@@ -5,8 +5,9 @@
     <div class="base-body"><section id="header" class="site header">
     <div class="header wrap"><span class="header left-side"><a class="site home" href="/"><img class="site logo" src="/images/profile.JPG" alt /><span class="site name">ふぉれすけ広場</span></a></span>
         <span class="header right-side"><div class="nav wrap"><nav class="nav"><a class="nav item" href="/tags/">Tags</a><a class="nav item" href="/about/">About</a><a class="nav item" href="https://github.com/foresukecom"target="_blank">GitHub</a><a class="nav item" href="https://twitter.com/foresukecom"target="_blank">Twitter</a></nav></div></span></div><div class="site slogan"><span class="title">筋トレしたり、お酒を飲んだり、ゲームしたり。</span></div></section><div id="content"><section class="article header">
-    <h1 class="article title">About</h1><p class="article date">2019/02/28</p></section><article class="article markdown-body"><h1 id="紹介">紹介</h1>
-<p>主にIT技術関連やゲームについて <a href="https://twitter.com/foresukecom"target="_blank">@foresuke</a> が書いているブログです。</p>
+    <h1 class="article title">About</h1><p class="article date">2019/02/28</p></section><article class="article markdown-body"><h2 id="ご挨拶">ご挨拶</h2>
+<p>はじめまして。<br>
+主にIT技術関連やゲームについて <a href="https://twitter.com/foresukecom"target="_blank">@foresuke</a> が書いているブログです。</p>
 <h1 id="google-analytics">Google Analytics</h1>
 <p>当ブログでは、Googleによるアクセス解析ツール「Googleアナリティクス」を利用しています。
 このGoogleアナリティクスはトラフィックデータの収集のためにCookieを使用しています。このトラフィックデータは匿名で収集されており、個人を特定するものではありません。この機能はCookieを無効にすることで収集を拒否することが出来ますので、お使いのブラウザの設定をご確認ください。この規約に関して、詳しくは<a href="https://policies.google.com/?hl=ja"target="_blank">ここ</a>をクリックしてください。</p>
