--- a/about/index.html
+++ b/about/index.html
@@ -11,6 +11,8 @@
 <h1 id="google-analytics">Google Analytics</h1>
 <p>当ブログでは、Googleによるアクセス解析ツール「Googleアナリティクス」を利用しています。
 このGoogleアナリティクスはトラフィックデータの収集のためにCookieを使用しています。このトラフィックデータは匿名で収集されており、個人を特定するものではありません。この機能はCookieを無効にすることで収集を拒否することが出来ますので、お使いのブラウザの設定をご確認ください。この規約に関して、詳しくは<a href="https://policies.google.com/?hl=ja"target="_blank">ここ</a>をクリックしてください。</p>
+<h1 id="amazon-アソシエイト">Amazon アソシエイト</h1>
+<p>ふぉれすけ広場は、Amazon.co.jpを宣伝しリンクすることによってサイトが紹介料を獲得できる手段を提供することを目的に設定されたアフィリエイトプログラムである、Amazonアソシエイト・プログラムの参加者です。</p>
 </article></div><section id="footer" class="footer"><div class="footer-wrap">
     <p class="copyright">©2019 foresuke.</p>
     <p class="powerby"><span>Powered by </span><a href="https://gohugo.io" 
