--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <meta name="supported-color-schemes" content="light dark"><title>ふぉれすけ広場&nbsp;&ndash;&nbsp;筋トレしたり、お酒を飲んだり、ゲームしたり。</title><link rel="stylesheet" href="/css/core.min.777ee3824a1eff7cd7e15aa64f6d18d4b1574d195cc6288fc6b6cd5dddfd26dc816168cf945ec9cada3ab228c7932bac.css" integrity="sha384-d37jgkoe/3zX4VqmT20Y1LFXTRlcxiiPxrbNXd39JtyBYWjPlF7Jyto6sijHkyus"><link rel="alternate" type="application/rss+xml" href="/index.xml" title="ふぉれすけ広場" /><body>
     <div class="base-body"><section id="header" class="site header">
     <div class="header wrap"><span class="header left-side"><a class="site home" href="/"><img class="site logo" src="/images/profile.JPG" alt /><span class="site name">ふぉれすけ広場</span></a></span>
-        <span class="header right-side"><div class="nav wrap"><nav class="nav"><a class="nav item" href="/tags/">Tags</a><a class="nav item" href="/about/">About</a><a class="nav item" href="https://github.com/foresukecom"target="_blank">GitHub</a><a class="nav item" href="https://twitter.com/foresukecom"target="_blank">Twitter</a></nav></div></span></div><div class="site slogan"><span class="title">筋トレしたり、お酒を飲んだり、ゲームしたり。</span></div></section><div id="content"><ul class="note list"><li class="item"><a class="note" href="/post/tansan/">
+        <span class="header right-side"><div class="nav wrap"><nav class="nav"><a class="nav item" href="/tags/">Tags</a><a class="nav item" href="/about/">About</a><a class="nav item" href="https://github.com/foresukecom"target="_blank">GitHub</a><a class="nav item" href="https://twitter.com/foresukecom"target="_blank">Twitter</a></nav></div></span></div><div class="site slogan"><span class="title">筋トレしたり、お酒を飲んだり、ゲームしたり。</span></div></section><div id="content"><ul class="note list"><li class="item"><a class="note" href="/post/react_anime/">
+            <p class="note title">Reactでアニメーションを試しましたよ</p><p class="note date">2020/06/15</p><p class="note content">Reactでアニメーション
+<span class="mldr">&mldr;more</span></p></a><p class="note labels"><a class="tag" href="/tags/react/">React</a></p></li><li class="item"><a class="note" href="/post/tansan/">
             <p class="note title">ウィルキンソン 新パッケージ</p><p class="note date">2020/05/24</p><p class="note content">ウィルキンソン タンサンがバージョンアップしましたよ。
 <span class="mldr">&mldr;more</span></p></a><p class="note labels"><a class="tag" href="/tags/other/">Other</a></p></li><li class="item"><a class="note" href="/post/react_tweet/">
             <p class="note title">Reactの画面にTweet埋め込み</p><p class="note date">2020/05/01</p><p class="note content">Reactで作った画面にTweetを埋め込むときのメモです。
@@ -22,8 +24,7 @@
             <p class="note title">Human Fall FlatとSteam Remote Play Together</p><p class="note date">2020/02/03</p><p class="note content">友人とHuman Fall Flatというゲームを遊びました。
 <span class="mldr">&mldr;more</span></p></a><p class="note labels"><a class="tag" href="/tags/steam/">Steam</a></p></li><li class="item"><a class="note" href="/post/go_toml/">
             <p class="note title">TOMLをGolangで読み込もうとして躓いた話</p><p class="note date">2020/02/03</p><p class="note content">GolangでTOMLファイルに書かれた設定を読み込もうした時に躓いたのでメモを残しておきます。
-<span class="mldr">&mldr;more</span></p></a><p class="note labels"><a class="tag" href="/tags/golang/">Golang</a></p></li><li class="item"><a class="note" href="/post/shiburaku/">
-            <p class="note title">渋谷落語を観てきました</p><p class="note date">2019/07/14</p><p class="note content">渋谷で毎月開催される初心者向け落語会、渋谷落語を観てきました。 「渋谷らくご」3日目 7/14(日) 14:00-16:00 柳家わさび-垂乳根 台所おさん-愛宕山 風藤松<span class="mldr">&mldr;more</span></p></a><p class="note labels"><a class="tag" href="/tags/other/">Other</a></p></li></ul><div class="pagination">
+<span class="mldr">&mldr;more</span></p></a><p class="note labels"><a class="tag" href="/tags/golang/">Golang</a></p></li></ul><div class="pagination">
     <ul><li><a class="active" href="/">1</a></li><li><a class="" href="/page/2/">2</a></li><li><a class="" href="/page/3/">3</a></li><li><a class="" href="/page/4/">4</a></li><li><a class="" href="/page/5/">5</a></li></ul>
 </div></div><section id="footer" class="footer"><div class="footer-wrap">
     <p class="copyright">©2019 foresuke.</p>
