Update hugo post

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <div class="base-body"><section id="header" class="site header">
     <div class="header wrap"><span class="header left-side"><a class="site home" href="/"><img class="site logo" src="/images/profile.JPG" alt /><span class="site name">ふぉれすけ広場</span></a></span>
         <span class="header right-side"><div class="nav wrap"><nav class="nav"><a class="nav item" href="/tags/">Tags</a><a class="nav item" href="/about/">About</a><a class="nav item" href="https://github.com/foresukecom"target="_blank">GitHub</a><a class="nav item" href="https://twitter.com/foresukecom"target="_blank">Twitter</a></nav></div></span></div><div class="site slogan"><span class="title">筋トレしたり、お酒を飲んだり、ゲームしたり。</span></div></section><div id="content"><ul class="note list"><li class="item"><a class="note" href="/post/yabai_statistics/">
-            <p class="note title">統計学の本を読みましたよ</p><p class="note date">2020/08/08</p><p class="note content">久しぶりに、漫画、小説以外で仕事に関係ない本を読みました。
+            <p class="note title">統計学の本を読みましたよ</p><p class="note date">2020/08/08</p><p class="note content">漫画、小説以外で仕事に関係ない本を久しぶりに読みました。
 <span class="mldr">&mldr;more</span></p></a><p class="note labels"><a class="tag" href="/tags/book/">book</a></p></li><li class="item"><a class="note" href="/post/golang_cli/">
             <p class="note title">golangのCLIツールで複数のオプションを受け取る</p><p class="note date">2020/07/28</p><p class="note content">golangでCLIツールを作るにあたり、同じオプションを複数指定する方法を調べましたよ。
 <span class="mldr">&mldr;more</span></p></a><p class="note labels"><a class="tag" href="/tags/golang/">golang</a></p></li><li class="item"><a class="note" href="/post/steam2020summer/">
