--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <meta name="supported-color-schemes" content="light dark"><title>ふぉれすけ広場&nbsp;&ndash;&nbsp;筋トレしたり、お酒を飲んだり、ゲームしたり。</title><link rel="stylesheet" href="/css/core.min.777ee3824a1eff7cd7e15aa64f6d18d4b1574d195cc6288fc6b6cd5dddfd26dc816168cf945ec9cada3ab228c7932bac.css" integrity="sha384-d37jgkoe/3zX4VqmT20Y1LFXTRlcxiiPxrbNXd39JtyBYWjPlF7Jyto6sijHkyus"><link rel="alternate" type="application/rss+xml" href="/index.xml" title="ふぉれすけ広場" /><body>
     <div class="base-body"><section id="header" class="site header">
     <div class="header wrap"><span class="header left-side"><a class="site home" href="/"><img class="site logo" src="/images/profile.JPG" alt /><span class="site name">ふぉれすけ広場</span></a></span>
-        <span class="header right-side"><div class="nav wrap"><nav class="nav"><a class="nav item" href="/tags/">Tags</a><a class="nav item" href="/about/">About</a><a class="nav item" href="https://github.com/foresukecom"target="_blank">GitHub</a><a class="nav item" href="https://twitter.com/foresukecom"target="_blank">Twitter</a></nav></div></span></div><div class="site slogan"><span class="title">筋トレしたり、お酒を飲んだり、ゲームしたり。</span></div></section><div id="content"><ul class="note list"><li class="item"><a class="note" href="/post/yabai_statistics/">
+        <span class="header right-side"><div class="nav wrap"><nav class="nav"><a class="nav item" href="/tags/">Tags</a><a class="nav item" href="/about/">About</a><a class="nav item" href="https://github.com/foresukecom"target="_blank">GitHub</a><a class="nav item" href="https://twitter.com/foresukecom"target="_blank">Twitter</a></nav></div></span></div><div class="site slogan"><span class="title">筋トレしたり、お酒を飲んだり、ゲームしたり。</span></div></section><div id="content"><ul class="note list"><li class="item"><a class="note" href="/post/koka/">
+            <p class="note title">「子供の科学」のススメ</p><p class="note date">2020/10/06</p><p class="note content">今回は科学リテラシーのお話です。
+<span class="mldr">&mldr;more</span></p></a><p class="note labels"><a class="tag" href="/tags/book/">book</a><a class="tag" href="/tags/podcast/">podcast</a></p></li><li class="item"><a class="note" href="/post/yabai_statistics/">
             <p class="note title">統計学の本を読みましたよ</p><p class="note date">2020/08/08</p><p class="note content">漫画、小説以外で仕事に関係ない本を久しぶりに読みました。
 <span class="mldr">&mldr;more</span></p></a><p class="note labels"><a class="tag" href="/tags/book/">book</a></p></li><li class="item"><a class="note" href="/post/golang_cli/">
             <p class="note title">golangのCLIツールで複数のオプションを受け取る</p><p class="note date">2020/07/28</p><p class="note content">golangでCLIツールを作るにあたり、同じオプションを複数指定する方法を調べましたよ。
@@ -22,9 +24,7 @@
             <p class="note title">ティール組織</p><p class="note date">2020/04/10</p><p class="note content">「ティール組織 ― マネジメントの常識を覆す次世代型組織の出現」 を読みましたよ。
 <span class="mldr">&mldr;more</span></p></a><p class="note labels"><a class="tag" href="/tags/book/">book</a></p></li><li class="item"><a class="note" href="/post/docker_image/">
             <p class="note title">Dockerイメージを配布する手順</p><p class="note date">2020/03/28</p><p class="note content">はじめに 以前、「自作のツールをDockerイメージとして配ると便利だよー」と聞いたので試してみました。
-<span class="mldr">&mldr;more</span></p></a><p class="note labels"><a class="tag" href="/tags/docker/">Docker</a><a class="tag" href="/tags/php/">php</a></p></li><li class="item"><a class="note" href="/post/eyemask/">
-            <p class="note title">アイマスクのすすめ</p><p class="note date">2020/02/24</p><p class="note content">最近、寝付きが悪くなってきたのでアイマスクを使い始めました。
-<span class="mldr">&mldr;more</span></p></a><p class="note labels"><a class="tag" href="/tags/other/">Other</a></p></li></ul><div class="pagination">
+<span class="mldr">&mldr;more</span></p></a><p class="note labels"><a class="tag" href="/tags/docker/">Docker</a><a class="tag" href="/tags/php/">php</a></p></li></ul><div class="pagination">
     <ul><li><a class="active" href="/">1</a></li><li><a class="" href="/page/2/">2</a></li><li><a class="" href="/page/3/">3</a></li><li><a class="" href="/page/4/">4</a></li><li><a class="" href="/page/5/">5</a></li></ul>
 </div></div><section id="footer" class="footer"><div class="footer-wrap">
     <p class="copyright">©2019 foresuke.</p>
