--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 <meta property="og:title"               content="404 Page not found">
 <meta property="og:url"                 content="http://foresukecom.github.io/404.html">
 <meta property="og:type"                content="website">
-<meta name="twitter:card"               content="summary_large_image">
+<meta name="twitter:card"               content="summary">
 <meta property="twitter:title"          content="404 Page not found">
 
     <meta property="og:description"         content="筋トレしたり、お酒を飲んだり、ゲームしたり。">
